# feature-based-localization

./: .gitignore  CMakeLists.txt
python/: server.py  superglue.py  superglue_2d_slam.py  superglue_2d_slam_angle.py  test_lightglue.py  test_matchany.py  test_superglue.py
python/helpers/: receiver.py
src/: main.cpp  main_deprecieted.cpp
